attemptting to fix slide show spacing attempt number 10000012342312341234+4

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -765,7 +765,10 @@ ow-container {
   left: 50%;
   transform: translate(-50%, 50%); 
   width: 60%;
-  height: 50px; 
+  height: 30px; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
   background: rgba(0, 0, 0, 0.6);
   border-radius: 8px;
